--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -49,19 +49,94 @@ table {
 body * {
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
+	text-decoration: none;
 }
+
+$main: #57F1BA;
+$light-gray: #CFCFCF;
+$medium-gray: #6F7774;
+$blank: #1D201F;
+$light-gray: #F6F6F6;
+$white: #F4FFFB;
+
+
 
 .discover-page {
     padding: 0px 150px;
 }
 
-.top-navbar{
+
+// Navbar studd
+.top-navbar-align {
     display: block;
     height: 80px;
     /* light-gray */   
     border-bottom: 0.5px solid #CFCFCF;
-    margin-bottom: 37px;
+	padding: 0px 150px;
 }
+.top-navbar {
+	display: flex;
+	height: 100%;
+	align-items: center;
+	justify-content: space-between;
+}
+.navbarCompany {
+	display: flex;
+	gap: 22px;
+	align-items: center;
+
+	p {
+		color: $blank;
+		font-weight: 600;
+		font-size: 20px;
+	}
+}
+.navLogo {
+	width: 41px;
+}
+.navSearchContainer {
+	display: flex;
+}
+.navBarIcon {
+	display: flex;
+	justify-content: flex-end;
+	border-radius: 1000px 0px 0px 1000px;
+	height: 41px;
+	width: 35px;
+	background: #F7F7F7;
+	font-size: 15px;
+	color: $medium-gray;
+	align-items: center;
+}
+.navSearch {
+	height: 41px;
+	width: 425px;
+	color: $medium-gray;
+	font-size: 15px;
+	background: #F7F7F7;
+	border-radius: 0px 1000px 1000px 0px;
+	border: none;
+	outline: none;
+	padding-left: 10px;
+}
+.navAccount {
+	display: flex;
+	gap: 20px;
+	align-items: center;
+
+	img {
+		width: 41px;
+	}
+
+	p {
+		font-weight: 600;
+		font-size: 18px;
+		color: $blank;
+	}
+}
+.fontAwesome { font-family: 'Helvetica', FontAwesome, sans-serif; }
+
+
 
 .discover-sections-p {
     height: 39px;
@@ -71,12 +146,12 @@ body * {
 }
 
 .discover-sections {
+	margin-top: 37px;
     display: flex;
-    gap: 34px;
+    gap: 10px;
 }
 
 .discover-section {
-    height: 23px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
@@ -85,6 +160,14 @@ body * {
     /* identical to box height */
     /* medium-gray */
     color: #6F7774;
+	padding: 8px 12px;
+	border-radius: 5px;
+	transition: background 0.5s;
+	cursor: pointer;
+
+	&:hover {
+		background: $light-gray;
+	}
 }
 
 .listings {
@@ -180,4 +263,181 @@ body * {
     display: block;
     background: #57F1BA;
     content: 'Check it out';
+}
+
+
+
+.signup {
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	justify-content: center;
+	width: 50%;
+	height: 100%;
+	background: $blank;
+
+	h1 {
+		font-weight: 700;
+		font-size: 45px;
+		color: $white;
+	}
+}
+.signUpText {
+	margin-top: 50px;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 35px;
+	color: $medium-gray;
+	text-align: center;
+	width: 100%;
+	max-width: 540px;
+}
+.signupButton {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 65px;
+	width: 200px;
+	height: 60px;
+	background: $main;
+	border-radius: 5px;
+	font-weight: 600;
+	font-size: 18px;
+	border: 2px solid $main;
+	color: $white;
+	cursor: pointer;
+	transition: background 0.5s, color 0.5s;
+	
+	&:hover {
+		background: none;
+		color: $main;
+	}
+
+}
+.signin {
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	width: 50%;
+
+	h1 {
+		font-weight: 700;
+		font-size: 45px;
+		color: $blank;
+	}
+}
+.signupMain {
+	display: flex;
+	height: 115vh;
+}
+.loginMain {
+	display: flex;
+	height: calc(100vh - 80px);
+	overflow-y: hidden;
+}
+.signinInputContainerText {
+	display: flex;
+	align-items: center;
+	font-weight: 500;
+	font-size: 22px;
+	color: $blank;
+
+	span {
+		color: $medium-gray;
+		font-weight: 500;
+		font-size: 15px;
+		margin-left: 5px;
+	}
+}
+.signinInputContainer {
+	margin-top: 40px;
+}
+.signinInput {
+	margin-top: 9px;
+	background: #F7F7F7;
+	border-radius: 5px;
+	width: 538px;
+	height: 55px;
+	color: $medium-gray;
+	font-size: 18px;
+	border: none;
+	outline: none;
+	padding-left: 27px;
+
+	&::placeholder {
+		color: #CFCFCF;
+	}
+}
+.signinInputContainer2 {
+	margin-top: 23px;
+}
+.signinButton {
+	@extend .signupButton;
+}
+.navSignInButton {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 125px;
+	height: 41px;
+	background: $main;
+	border-radius: 5px;
+	font-weight: 600;
+	font-size: 16px;
+	border: 2px solid $main;
+	color: $white;
+	cursor: pointer;
+	transition: background 0.5s, color 0.5s;
+	
+	&:hover {
+		background: none;
+		color: $main;
+	}
+}
+.signInInputRadios {
+	margin-top: 23px;
+	width: 540px;
+}
+.signInInputRadiosContainer {
+	display: flex;
+	flex-flow: column;
+	margin-top: 15px;
+	gap: 10px;
+	font-weight: 500;
+	font-size: 15px;
+	color: $medium-gray;
+}
+.sisngInRadioButton {
+	display: flex;
+	align-items: center;
+	gap: 11px;
+}
+.sisngInRadioButton input[type="radio"] {
+	appearance: none;
+	background-color: #fff;
+	margin: 0;
+	font: inherit;
+	width: 12px;
+	height: 12px;
+	border-radius: 1000px;
+	background: $main;
+}
+.sisngInRadioButton input[type="radio"] {
+	display: grid;
+	place-content: center;
+}
+.sisngInRadioButton input[type="radio"]::before {
+	content: "";
+	width: 6px;
+	height: 6px;
+	border-radius: 50%;
+	transform: scale(0);
+	transition: 120ms transform ease-in-out;
+	box-shadow: inset 1em 1em $white;
+}
+  
+.sisngInRadioButton input[type="radio"]:checked::before {
+	transform: scale(1);
 }
