--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -179,11 +179,35 @@ $white: #F4FFFB;
     position: relative;
     padding: 20px;
     width: 278px;
-    height: 335px;
+	height: max-content;
     /* Light-gray */
     background: #F7F7F7;
     border-radius: 25px;
     margin-bottom: 62px;
+	cursor: pointer;
+	
+	&::after {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		content: "Check It Out";
+		position: absolute;
+		opacity: 0;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: $main;
+		border-radius: 25px;
+		transition: opacity 0.3s;
+		font-weight: 800;
+		font-size: 22px;
+		color: $white;
+	}
+
+	&:hover::after {
+		opacity: 1;
+	}
 }
 
 .listing-title {
@@ -201,7 +225,6 @@ $white: #F4FFFB;
 
 .listing-tags {
     width: 240px;
-    height: 55px;
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 27px;
@@ -247,25 +270,6 @@ $white: #F4FFFB;
 .listing-location > span, .listing-author > span {
     font-weight: 600;
 }
-
-.listing::after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    border-radius: 25px;
-    background: transparent;
-    cursor: pointer;
-}
-
-.listing::after:hover {
-    display: block;
-    background: #57F1BA;
-    content: 'Check it out';
-}
-
-
 
 .signup {
 	display: flex;
@@ -440,4 +444,76 @@ $white: #F4FFFB;
   
 .sisngInRadioButton input[type="radio"]:checked::before {
 	transform: scale(1);
+}
+
+
+.listingMain {
+	display: flex;
+	height: calc(100vh - 80px);
+	overflow: hidden;
+}
+.author {
+	position: relative;
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	width: 35%;
+	background: $blank;
+	padding: 40px;
+}
+.listingCompanyImage {
+	width: 150px;
+	height: 150px;
+	object-fit: cover;
+	border-radius: 1000px;
+}
+.listingAuthorName {
+	margin-top: 29px;
+	font-weight: 600;
+	font-size: 45px;
+	color: $white;
+}
+.listingAuthorDescription {
+	margin-top: 42px;
+	max-width: 485px;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 30px;
+	color: $medium-gray;
+	text-align: center;
+}
+.authorSocials {
+	position: absolute;
+	bottom: 40px;
+	display: flex;
+	justify-content: space-between;
+	width: calc(100% - 80px);
+}
+.authorSocial {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 81px;
+	height: 81px;
+	background: $main;
+	border-radius: 1000px;
+	color: $white;
+	font-size: 27px;
+	border: 2px solid $main;
+	transition: background 0.5s, color 0.5s;
+	cursor: pointer;
+
+	&:hover {
+		background: none;
+		color: $main;
+	}
+}
+.listingDetails {
+	h1 {
+		font-weight: 700;
+		font-size: 35px;
+		color: $blank;
+	}
 }
